@@ -511,3 +511,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 	 loop blocks broken).
 20070724 tape.c: fix stray TZX loop end block causes segfault (fixes bug
 	 #1758860).
+20070724 test/test.c: allow individual tests to be selected.
